# Latent-gui-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  build_agentnet_lara_gui_dataset.py  build_lara_stage1_training_dataset.py  enrich_agentnet_lara_clean_with_vllm.py  evaluate_lara_style_qwen3vl.py  evaluate_lara_style_qwen3vl_batched.py  finalize_agentnet_lara_clean.py  merge_agentnet_clean_fixed_subset.py  preflight_lara_clean_pipeline.py  prepare_agentnet_clean_fixed_subset.py  prepare_agentnet_lara_clean.py  prepare_lara_fixed_splits.py  pyproject.toml  requirements-ppu.txt  requirements.txt  run_lara_clean_s100_full_pipeline.sh  summarize_lara_clean_pipeline.py  train_lara_style_qwen3vl.py  train_lara_style_qwen3vl_active_batch.py  train_lara_style_qwen3vl_active_batch_ddp.py
docker/: ppu.Dockerfile
qwen3_gui_agent/: __init__.py  distributed_training.py  evaluation_utils.py  executor.py  flow_matching_action_head.py  gui_action_tokenizer.py  lara_style_qwen3vl_agent.py  latent_two_way_action_head.py  predictive_patch_pruner.py  qwen3vl_pixel_pruned_visual.py  schemas.py  training_checkpoint.py  training_utils.py  typed_action_router.py  unified_action_head.py  visual_latent_compressor.py
scripts/: __init__.py  build_ppu_image.sh  collect_runtime_info.py  download_agentnet_ubuntu.py  export_cluster_environment.sh  make_portable_requirements.py  restore_ppu_environment.sh  run_agentnet_clean_subset_dual_vllm.sh  run_agentnet_lara_clean_pipeline.sh  run_field_aligned_pipeline.sh  run_lara_clean_scale_s2000_best_ppu89.sh  run_ppu_container.sh  (+6 more)
(+10 files in other folders)
