[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-latent-gui-agent"
version = "0.1.0"
description = "Field-aligned trajectory latent reasoning and visual grounding for GUI agents."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qwen3_gui_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
